# finopsmcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .secrets.baseline  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  Dockerfile  Dockerfile.glama  LICENSE.enterprise  NOTICE  README.md  SECURITY.md  docker-compose.selfhost.yml  docker-compose.yml  glama.json  nable-gtm.js  pyproject.toml  server.json  smithery.yaml
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/budget-check/: action.yml  entrypoint.py
.github/actions/cost-check/: action.yml  entrypoint.py
.github/apps/: nable-app.yml
.github/workflows/: codeql.yml  image.yml  publish-shim.yml  publish.yml  scorecard.yml  security.yml  test.yml  web.yml
deploy/: Caddyfile  ec2-user-data.sh  fleet-update.sh  provision-tenant.sh
docs/: BETA_LICENSING.md  DEPLOY.md  FLEET.md  PROVISIONING.md  README.md  RECOMMENDATIONS.md  SLACK.md  demo.tape  n8n-workflow-template.json  network-manifest.json  sbom.json  slack-app-manifest.yaml  tool-inventory.txt
docs/specs/: agent-cost-controls-v1.md
docs/video/: _demo_fns.sh  demo-60s-terminal.tape  nable-demo.tape  setup-demo.tape  storyboard.md
examples/: claude_mcp_config.json
examples/github-actions/: README.md  budget-check.yml  cost-check.yml
internal/: watchdog-design.md
packaging/mcpb/: README.md  manifest.json
packaging/nable/: README.md  pyproject.toml
plugins/nable/: README.md
plugins/nable/.claude-plugin/: plugin.json
plugins/nable/commands/: connect.md
scripts/: agent-cost-ab.py  demo_all_normalized.py  demo_all_providers.py  demo_focus_normalization.py  demo_scale.py  fix_docstrings.py  gen_tool_docs.py  generate_sbom.py  publish_cfn.py  redact_screenshots.py  setup-hosting-credits.sh  utm_links.sh  weekly-read.py
shim/: README.md  pyproject.toml
src/finops/: __init__.py  _logutil.py  _preflight.py  accounts.py  agent_controls.py  ai_budget.py  cache.py  capabilities.py  cli_ai_budget.py  cli_scan.py  config.py  demo.py  demo_data.py  doctor.py  entry.py  guard.py  license.py  persona.py  plugins.py  policy.py  preflight.py  scan_assembler.py  server.py  server_web.py  setup_scan.py  setup_wizard.py  telemetry.py  token_budget.py  tool_surface.py  update_check.py  vscode_extension_prices.py  welcome.py
src/finops/analytics/: ai_kpis.py  ai_optimizer.py  benchmarks.py  llm_commitments.py  token_forecast.py
src/finops/analyzers/: cloudwatch.py  optimizer.py  traffic.py  waste.py  (+1 more)
templates/: aws-cur-setup.yaml  aws-org-finops-role.yaml
tests/: conftest.py  test_activate_pro.py  test_active_pool_empty_subset.py  test_agent_cost_controls.py  test_agent_gating.py  test_ai_budget.py  test_ai_cost_tools_bugs.py  test_ai_kpis.py  test_ai_optimizer.py  test_airgap.py  test_anthropic_cost_api.py  test_approval_profile.py  test_audit_logger.py  test_aws_reauth_hint.py  test_aws_zero_spend_flag.py  test_azure_cloudshell.py  test_cache.py  test_cache_hmac.py  test_capabilities.py  test_check_action_policy.py  test_cli_e2e.py  test_cli_help.py  test_cli_scan.py  test_connect_aws.py  test_connect_gcp_azure.py  test_connect_instrumentation.py  test_connector_categories.py  test_context_memory.py  test_control_plane_login.py  test_credibility_fixes.py  test_credit_headsup.py  test_credit_tracking.py  test_credits.py  test_csv_export.py  test_csv_formula_injection.py  test_demo_dashboard.py  test_demo_mode_coverage.py  test_denied_action.py  test_duplicate_capability.py  test_editor_first_contact.py  (+87 more)
tests/analyzers/: test_idle_ec2_vcpus.py
tests/attribution/: test_mapper.py
tests/blame/: conftest.py  test_find_cost_culprit.py  test_git_blame.py
tests/cleanup/: test_idle_summary_cap.py
tests/connectors/: test_aws_org_cache.py  test_azure_optimize.py  test_business_metrics_runway.py  test_llm_recommendations.py  test_n8n.py  test_notion.py  test_stripe_business_snapshot.py
tests/notifications/: test_is_report_due.py
tests/recommendations/: test_bedrock_routing.py  test_cloudwatch_alarms.py  test_cloudwatch_cardinality.py  test_cloudwatch_logs_ia.py  test_commitment_sizing.py  test_database_savings_plans.py  test_ebs_snapshot_replication.py  test_efs_cross_az.py  test_gcp_recommender.py  test_gcp_waste.py  test_graviton.py  test_lambda_concurrency.py  test_lambda_snapstart.py  test_nlb_cross_zone.py  test_nonprod_scheduler.py  test_public_ipv4.py  test_rds_snapshots.py  test_s3_bucket_keys.py  test_s3_intelligent_tiering.py  test_s3_transfer_acceleration.py  test_spot_adoption.py  test_spot_diversification.py  test_textract_env.py
tests/remediation/: test_rightsizing_pr.py
tests/reporting/: test_dashboard.py
tests/slack_bot/: conftest.py  test_bridge.py  test_llm_tiers.py  test_memory.py  test_remediation.py
tests/tagging/: test_hcl_patcher.py
tests/watchdog/: test_correlator.py  test_job.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts  parser.ts  prices.ts
web/: SITE-REVAMP-BRIEF.md  about.html  account-admin.html  account.html  agents.html  app.js  app.jsx  aws-rightsizing-pull-request.html  commitment-calculator.html  compare.html  dashboard-mockup.html  demo.html  docs-app.js  docs.html  finops-mcp-comparison.html  font-compare.html  guides.html  iam.html  icon-compare.html  index-v1-busy.html  index.html  kubernetes-cost-without-prometheus.html  launch-slides.html  llms.txt  logo-preview.html  nable-vs-cloudhealth.html  nable-vs-kubecost.html  nable-vs-vantage.html  package.json  pricing.html  pricing.md  privacy.html  reduce-aws-bill.html  ri-calculator.html  robots.txt  security.html  site.css  sitemap.xml  tailwind-docs.css  terms.html  (+8 more)
web/.well-known/: security.txt
web/api/: demo-ask.js  pypi-stats.js  pypi-version.js  stripe-webhook.js  subscribe.js
web/cloudformation/: readonly-key.json
web/marketing/: og-card.html  screenshot-cost-summary.html  screenshot-remediation.html
(+196 files in other folders)
