[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finops-mcp"
version = "0.3.1"
description = "Ask Claude about your cloud costs — AWS, Azure, GCP, Datadog, Snowflake, and 8 more"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "finops", "claude", "aws", "cloud-cost", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    # cloud providers
    "boto3>=1.34.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-identity>=1.15.0",
    "google-cloud-billing>=1.13.0",
    "google-cloud-bigquery>=3.17.0",
    # storage + scheduling
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    # security
    "cryptography>=42.0.0",
    # shared utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.6.0"]
azure-oauth = ["msal>=1.28.0"]
keyring = ["keyring>=25.0.0"]
pdf = ["pdfplumber>=0.10.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
finops-mcp   = "finops.server:main"
finops       = "finops.setup_wizard:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finops"]

[tool.ruff]
line-length = 100
