[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finops-mcp"
version = "0.8.34"
description = "Ask Claude about your AWS, Azure, GCP, and SaaS costs. MCP server with anomaly detection, rightsizing, and Jira ticketing."
readme = "README.md"
license = { text = "Elastic-2.0" }
authors = [{ name = "Chandan Bukkapatnam", email = "chbu0285@colorado.edu" }]
maintainers = [{ name = "Chandan Bukkapatnam", email = "chbu0285@colorado.edu" }]
keywords = ["mcp", "finops", "claude", "aws", "cloud-cost", "ai", "cost-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    # cloud providers
    "boto3>=1.34.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-identity>=1.15.0",
    "google-cloud-billing>=1.13.0",
    "google-cloud-bigquery>=3.17.0",
    # storage + scheduling
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    # security
    "cryptography>=42.0.0",
    # shared utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.6.0"]
azure-oauth = ["msal>=1.28.0"]
keyring = ["keyring>=25.0.0"]
pdf = ["pdfplumber>=0.10.0"]
slack = [
    "slack-bolt>=1.18.0",
    "anthropic>=0.25.0",
]
pr-comments = [
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
]
kubernetes = [
    "kubernetes>=29.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",   # or asyncpg for async
]
org = [
    "boto3>=1.34.0",            # already a core dep, org uses Organizations API
]
croniter = [
    "croniter>=2.0.0",          # precise cron scheduling for report subscriptions
]
all = [
    "snowflake-connector-python>=3.6.0",
    "msal>=1.28.0",
    "keyring>=25.0.0",
    "pdfplumber>=0.10.0",
    "slack-bolt>=1.18.0",
    "anthropic>=0.25.0",
    "kubernetes>=29.0.0",
    "psycopg2-binary>=2.9.0",
    "croniter>=2.0.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
finops-mcp        = "finops.server:main"
finops            = "finops.setup_wizard:main"
finops-slack      = "finops.slack_bot.app:main"
finops-pr-webhook = "finops.pr_comments.webhook:main"
finops-doctor     = "finops.doctor:main"
finops-estimate   = "finops.connectors.terraform_estimate:main"
finops-infra      = "finops.setup_wizard:main"
finops-license    = "finops.setup_wizard:main"

[project.urls]
Homepage      = "https://getnable.com"
Documentation = "https://getnable.com/docs"
"Bug Tracker" = "https://github.com/chaandannn/finopsmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/finops"]
artifacts = ["templates/*.yaml", "templates/*.json"]

[tool.hatch.build]
include = ["src/finops/**", "templates/**"]

[tool.ruff]
line-length = 100
