[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finops-mcp"
version = "0.8.159"
description = "Ask Claude about your AWS, Azure, GCP, and SaaS costs. MCP server with anomaly detection, rightsizing, and Jira ticketing."
readme = "README.md"
license = { text = "Elastic-2.0" }
authors = [{ name = "Chandan Bukkapatnam", email = "chbu0285@colorado.edu" }]
maintainers = [{ name = "Chandan Bukkapatnam", email = "chbu0285@colorado.edu" }]
keywords = [
    "mcp", "finops", "claude", "aws", "azure", "gcp", "cloud-cost",
    "cost-optimization", "ai", "llm", "claude-desktop", "cursor",
    "model-context-protocol", "cost-management", "cloud-billing",
    "anomaly-detection", "rightsizing", "kubernetes-cost",
    "aws-cost-explorer", "cloud-finops", "devops", "platform-engineering",
    "cost-intelligence", "saas-spend", "cloud-spend", "savings-plans",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    # cloud providers. AWS ships in core (the common path); the Azure and Google
    # Cloud SDKs are optional extras (finops-mcp[azure] / [gcp]) so the default
    # install stays small and the first cold `uvx` launch is fast. They are imported
    # lazily inside the Azure/GCP connectors, and is_configured() is env-var-only,
    # so an AWS-only install never needs them.
    "boto3>=1.34.0",
    # storage + scheduling
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    # security
    "cryptography>=48.0.1",  # 48.0.1 fixes GHSA-537c-gmf6-5ccf; keep the floor at or above it
    "keyring>=25.0.0",
    # shared utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    # The dashboard Ask tab (and the Slack bot) call the Anthropic SDK directly,
    # so it is core: without it `finops serve` chat returns "not set up" even with
    # ANTHROPIC_API_KEY set. Light, pure Python on httpx + pydantic (both core).
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
snowflake = ["snowflake-connector-python>=3.6.0"]
azure-oauth = ["msal>=1.28.0"]
azure = [
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-identity>=1.15.0",
]
gcp = [
    "google-cloud-billing>=1.13.0",
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-compute>=1.19.0",
    "google-cloud-monitoring>=2.21.0",
    "google-cloud-recommender>=2.15.0",
]
keyring = ["keyring>=25.0.0"]
pdf = ["pdfplumber>=0.10.0"]
slack = [
    "slack-bolt>=1.18.0",
    "anthropic>=0.25.0",
]
pr-comments = [
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
]
kubernetes = [
    "kubernetes>=29.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",   # or asyncpg for async
]
org = [
    "boto3>=1.34.0",            # already a core dep, org uses Organizations API
]
croniter = [
    "croniter>=2.0.0",          # precise cron scheduling for report subscriptions
]
all = [
    "snowflake-connector-python>=3.6.0",
    "msal>=1.28.0",
    "keyring>=25.0.0",
    "pdfplumber>=0.10.0",
    "slack-bolt>=1.18.0",
    "anthropic>=0.25.0",
    "kubernetes>=29.0.0",
    "psycopg2-binary>=2.9.0",
    "croniter>=2.0.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-identity>=1.15.0",
    "google-cloud-billing>=1.13.0",
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-compute>=1.19.0",
    "google-cloud-monitoring>=2.21.0",
    "google-cloud-recommender>=2.15.0",
]
dev = [
    "pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4",
    # Installed in CI so the GCP Recommender tests run against Google's real proto
    # types (Money, CostProjection, Duration-as-timedelta), not hand-rolled stand-ins.
    # This is a schema-drift guard: if a field name or shape changes, CI fails instead
    # of us finding out against a live account we don't have. The other cloud SDKs stay
    # out of dev on purpose; the Recommender path is the newest and least-dogfooded.
    "google-cloud-recommender>=2.15.0",
]

[project.scripts]
finops-mcp        = "finops.server:main"
finops            = "finops.setup_wizard:main"
finops-slack      = "finops.slack_bot.app:main"
finops-pr-webhook = "finops.pr_comments.webhook:main"
finops-doctor     = "finops.doctor:main"
finops-estimate   = "finops.connectors.terraform_estimate:main"

[project.urls]
Homepage      = "https://getnable.com"
Documentation = "https://getnable.com/docs"
"Bug Tracker" = "https://github.com/chaandannn/finopsmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/finops"]
artifacts = ["templates/*.yaml", "templates/*.json"]

[tool.hatch.build.targets.wheel.force-include]
# dashboard.html is matched by an over-broad ".gitignore" rule ("dashboard.html"),
# so hatchling's VCS file selection drops it from the wheel even though the file
# is tracked. Force it in: without it the served dashboard is just the fallback
# "Dashboard template missing. Reinstall nable." on every pip/uvx install.
"src/finops/static/dashboard.html" = "finops/static/dashboard.html"

[tool.hatch.build]
include = ["src/finops/**", "templates/**"]

[tool.pytest.ini_options]
# auto = async test functions run without an explicit @pytest.mark.asyncio marker.
# Tests that drive coroutines via asyncio.run() are unaffected.
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
