[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `nable` is a thin brand alias for the `finops-mcp` package. It ships no code of
# its own: it just depends on finops-mcp and exposes a `nable` console script that
# points at the same smart entry point, so `uvx nable` works exactly like
# `uvx finops-mcp`.
#
# 0.1.1 fixes a silent-staleness trap that 0.1.0 shipped: it allowed Python 3.10,
# but finops-mcp 0.8.90+ requires 3.11, so on any machine where uv picked a 3.10
# interpreter the resolver quietly served finops-mcp 0.8.89 forever, a five-week-
# old product with none of the current onboarding. requires-python >= 3.11 makes
# uv select or download a modern interpreter instead, and the dependency floor
# guarantees no resolver can reach back past the fix.
#
# 0.1.2 ships the CLI front door: the entry point repoints to the light
# dispatcher (finops.entry:main) so `uvx nable scan` prints in under 2s instead
# of paying the ~0.9s server import first, and the floor rises to the first
# release that has finops/entry.py + the scan subcommand. Without the floor
# bump, cached uv environments resolve an old finops-mcp with no `scan` at
# all: the same staleness trap 0.1.1 fixed, one layer up.
[project]
name = "nable"
version = "0.1.2"
description = "Ask Claude about your cloud and AI bill. Brand alias for finops-mcp."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Elastic-2.0" }
authors = [{ name = "Chandan Bukkapatnam", email = "chbu0285@colorado.edu" }]
keywords = ["finops", "mcp", "aws", "azure", "gcp", "cloud cost", "claude", "cursor"]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
]
dependencies = ["finops-mcp>=0.8.181"]

[project.urls]
Homepage = "https://getnable.com"
Documentation = "https://getnable.com/docs"
Repository = "https://github.com/getnable/finopsmcp"

[project.scripts]
nable = "finops.entry:main"

[tool.hatch.build.targets.wheel]
# Metadata-only package: no Python modules to include, just the entry point that
# resolves into the finops-mcp dependency.
bypass-selection = true
