[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `nable` is a thin brand alias for the `finops-mcp` package. It ships no code of
# its own: it just depends on finops-mcp and exposes a `nable` console script that
# points at the same smart entry point, so `uvx nable` works exactly like
# `uvx finops-mcp` (terminal -> onboarding wizard, MCP client over stdio -> server,
# any subcommand -> the CLI). finops-mcp stays the canonical, descriptive package;
# this exists only so the brand command is `uvx nable`.
[project]
name = "nable"
version = "0.1.0"
description = "Ask Claude about your cloud and AI bill. Brand alias for finops-mcp."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Elastic-2.0" }
authors = [{ name = "Chandan Bukkapatnam", email = "chbu0285@colorado.edu" }]
keywords = ["finops", "mcp", "aws", "azure", "gcp", "cloud cost", "claude", "cursor"]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
]
dependencies = ["finops-mcp>=0.8.78"]

[project.urls]
Homepage = "https://getnable.com"
Documentation = "https://getnable.com/docs"
Repository = "https://github.com/chaandannn/finopsmcp"

[project.scripts]
nable = "finops.server:main"

[tool.hatch.build.targets.wheel]
# Metadata-only package: no Python modules to include, just the entry point that
# resolves into the finops-mcp dependency.
bypass-selection = true
